# pyside6_qtads

./: .gitignore  .gitmodules  README.md  init.py  pyproject.toml  setup.py  windows.md
.github/workflows/: main.yml
build_bindings/: aqt-config.ini
build_bindings/linux/: build-no-setup.sh  build.sh  setup-vars.sh  setup.sh
build_bindings/windows/: build-no-setup.bat  build.bat  setup-vars.bat  setup.bat
scripts/: build_cpp_environment.py  generate_pyi.py  get-recent-releases.py
scripts/templates/: CMakeLists.txt  pyproject.toml  setup.cfg
src/: bindings.h  bindings.xml
